# headphones-plug-controller

./: COPYING  README.md  meson.build
src/: controller.vala  detector.vala  main.vala  meson.build
systemd/: headphones-plug-controller.service.in  meson.build
